--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ body {
 }
 
 .home-inner {
-    background-image: url(../1.jpeg);
+    background-image: url(../images/background.jpeg);
 }
 
 .caption {
@@ -42,6 +42,14 @@ body {
     font-weight: 900;
     letter-spacing: 1.5rem;
     text-shadow: 1rem 1rem 1rem black;
+    padding-bottom: 1rem;
+}
+
+.caption p {
+    font-size: 1.3rem;
+    font-weight: 700;
+    letter-spacing: .3rem;
+    text-shadow: .5rem .5rem .8rem black;
     padding-bottom: 1.1rem;
 }
 
